security: sanitize portainer config templates and update gitignore
SECURITY FIX: Removed real credentials from template files that were
accidentally committed with actual tokens.

Changes:
- Sanitized config/external/portainer_ci_cd.yaml with example values
- Sanitized config/external_templates/portainer_ci_cd.yaml.example
- Updated .gitignore to exclude all config/external/*.yaml files
- Updated path references in gitignore comments

This prevents real credentials from being committed to version control
while still providing useful template files for deployment setup.

--- a/vaktmesteren_server/.gitignore
+++ b/vaktmesteren_server/.gitignore
@@ -11,11 +11,12 @@ doc/api/
 # Passwords file
 config/passwords.yaml
 
-# Icinga2 configuration (contains secrets)
-config/icinga2.yaml
+# External service configurations (contain secrets)
+# These files are now in config/external/ and should not be committed with real credentials
+config/external/icinga2.yaml
+config/external/ssh_restart.yaml
+config/external/teams_notifications.yaml
+config/external/portainer_ci_cd.yaml
 
 # Firebase service account key for Firebase auth
 config/firebase_service_account_key.json
- 
-# Portainer CI/CD credentials (local file)
-config/portainer_ci_cd.yaml
